Sonar fixes