@@ -124,10 +124,10 @@ public class CaseDataOtherPersonsElementsMapper {
                              return null;
                          })
                          .filter(Objects::nonNull)
-                         .collect(Collectors.toList())
+                         .toList()
             )
             .flatMap(Collection::stream)
-            .collect(Collectors.toList());
+            .toList();
     }
 
 }
